src/test/ui/issues/issue-17373.rs
fn main() {
    *return //~ ERROR type annotations needed
    ;
}
